# blocklyPygame

./: README.md  blocklyPygame.html  doUpdate.bat  index.html - Shortcut.lnk  python_compressed.js
docs/: SessionOverview.txt  addComments.html  blasteroids.html  blocklyPygame.docx  breakEscape.html  callExternalPy.html  chromeSetup.html  collisionSprite.html  createFunction.html  createShortcut.html  cycleSheet.html  determineRowColumn.html  displayImage.html  displayText.html  dragDrop.html  drawCircle.html  drawLines.html  drawRect.html  fillCircle.html  fireMouse.html  flipSprite.html  functionDrawX.html  getKey.html  getKeyEvent.html  helloConsole.html  helloTitle.html  hungerFish.html  index.html  inputBox.html  installGit.html  installPygame.html  installPython.html  jebColor.html  joke1.html  jokes.html  keyMoveBoard.html  keysPressed.html  lessonPlan.html  lessonPlan2.html  loopUntilQuit.html  (+43 more)
libraries/PythonRead-master/: .gitignore  pyproject.toml
libraries/PythonRead-master/readkeys/: getch_unix.py  readkeys.py
projects/: addingBalls.py  blasteroids - Copy.xml  blasteroids.py  blasteroids.xml  blitRotate.py  breakout.py  class.py  class1a.py  class1c.py  class2VideoOutline.txt  determineRowColumn.xml  dragDrop.py  drawCircle.py  drawCircle.xml  drawImage.py  drawImage.xml  drawLine.py  drawLines.xml  drawRect.py  drawRect.xml  drawText.py  drawText.xml  drawXandO.xml  dropBallsJoint.xml  externalPyCall.xml  fireMouse.py  fireMouse.xml  flipper.py  flipper.xml  followMouse.py  followMouse.xml  getKey.py  getKey.xml  getKeyEvent.xml  handleKey.py  inBox.py  (+40 more)
(+78 files in other folders)
